--- a/public/assets/css/pencarian.css
+++ b/public/assets/css/pencarian.css
@@ -11,7 +11,7 @@
     transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
   .search-box.active{
-    width: 350px;
+    width: 312px;
   }
   .search-box input{
     width: 100%;
@@ -43,7 +43,7 @@
     text-align: center;
     line-height: 60px;
     font-size: 22px;
-    color: #664AFF;
+    color: #048315;
     cursor: pointer;
     z-index: 1;
     transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -54,7 +54,7 @@
     line-height: 50px;
     width: 50px;
     font-size: 20px;
-    background: #664AFF;
+    background: #048315;
     color: #fff;
     transform: translateY(-50%) rotate(360deg);
   }
